[gd_scene load_steps=8 format=3 uid="uid://r7wnk762jbfy"]

[ext_resource type="PackedScene" uid="uid://1o2ta17yc5bp" path="res://game/entities/weapons/abstract_weapon.tscn" id="1_xk300"]
[ext_resource type="Script" uid="uid://gxwbsiicuqh5" path="res://game/entities/weapons/shrapnel/abstract_shrapnel_weapon.gd" id="2_1bd18"]
[ext_resource type="Texture2D" uid="uid://b2tpy3y2bpuat" path="res://particle_textures/flame_small.tres" id="4_0tw2i"]
[ext_resource type="Texture2D" uid="uid://dxcxybr27kkra" path="res://particle_textures/shell_medium.tres" id="6_gdolk"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a22j7"]
resource_local_to_scene = true
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 2.0
angle_min = -179.99998
angle_max = 180.00002
inherit_velocity_ratio = 0.5
spread = 60.0
initial_velocity_min = 10.0
initial_velocity_max = 15.0
gravity = Vector3(0, 0, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_asm6v"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t57yr"]
resource_local_to_scene = true
particle_flag_disable_z = true
inherit_velocity_ratio = 0.5
direction = Vector3(0, 1, 0)
spread = 15.0
initial_velocity_min = 15.0
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)

[node name="AbstractShrapnelWeapon" instance=ExtResource("1_xk300")]
script = ExtResource("2_1bd18")
bullet_per_shot = 20
sector_angle = 30
type = 1

[node name="ShotParticles" type="GPUParticles2D" parent="." index="0"]
emitting = false
amount = 32
texture = ExtResource("4_0tw2i")
lifetime = 0.3
one_shot = true
process_material = SubResource("ParticleProcessMaterial_a22j7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_asm6v")

[node name="ShellParticles" type="GPUParticles2D" parent="." index="2"]
z_index = 1
emitting = false
amount = 15
texture = ExtResource("6_gdolk")
lifetime = 3.0
one_shot = true
process_material = SubResource("ParticleProcessMaterial_t57yr")

[node name="CooldownTimer" type="Timer" parent="." index="3"]
wait_time = 0.6
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
